# autonomous-insurance-claims-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
samples/: fnol_sample_complete.txt  fnol_sample_fraud_flag.txt  fnol_sample_injury.txt  fnol_sample_missing_fields.txt
src/: __init__.py  config.py  main.py  schemas.py
src/extraction/: __init__.py  parser.py
src/routing/: __init__.py  engine.py
tests/: __init__.py  test_api.py  test_extraction.py  test_routing.py
